--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 .hero {
   position: relative;
   isolation: isolate;
-  background-image: url('assets/Intake.jpg');
+  background-image: url('assets/BG_Desktop.jpg');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -226,7 +226,7 @@
 
 @media (max-width: 768px) {
   .hero {
-    background-image: url('assets/Intake.jpg');
+    background-image: url('assets/BG_Mobile.jpg');
     background-attachment: scroll; /* prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
