--- a/index.html
+++ b/index.html
@@ -287,11 +287,78 @@
     .section-lead{opacity:.85;margin:0 0 30px}
 
     /* Programs */
-    .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
-    .program{padding:24px;border-radius:18px;background:#fff;border:1px solid #efefef}
-    .program h3{margin:10px 0 6px}
-    .tag{display:inline-block;background:#f6f8fb;color:#29445c;border:1px solid #e9edf2;border-radius:999px;padding:6px 10px;font-size:12px;font-weight:700}
-    @media (max-width:900px){.grid-3{grid-template-columns:1fr}}
+/* ===== PROGRAMS SECTION ===== */
+#programs {
+  background: linear-gradient(135deg, #fff6e8 0%, #fdfaf5 100%);
+  padding: 80px 0;
+  position: relative;
+}
+
+.section-title {
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  color: #29445c;
+  margin-bottom: 12px;
+}
+
+.section-lead {
+  text-align: center;
+  color: #555;
+  max-width: 700px;
+  margin: 0 auto 40px;
+  font-size: 1.1rem;
+}
+
+.grid-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.program {
+  padding: 28px;
+  border-radius: 18px;
+  background: #fff;
+  border: 1px solid #efefef;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+
+.program:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+}
+
+.program h3 {
+  margin: 10px 0 10px;
+  color: #29445c;
+}
+
+.program p {
+  color: #444;
+  line-height: 1.5;
+}
+
+/* Responsive layout */
+@media (max-width: 900px) {
+  .grid-3 {
+    grid-template-columns: 1fr;
+  }
+}
+    
+.fade-up {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.fade-up.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+    
 
     /* Why */
     .why{display:grid;grid-template-columns:1fr 1fr;gap:28px}
@@ -456,10 +523,12 @@
   </section>
 
   <!-- Programs -->
-  <section id="programs" style="background:#fff">
+  <section id="programs" sclass="fade-up">
     <div class="container">
       <h2 class="section-title">Programmes & Highlights</h2>
       <p class="section-lead">Balanced academics + joyful enrichment to build confidence.</p>
+      <div class="grid-3 fade-up">
+      <!-- (keep your existing .program blocks here) -->
       <div class="grid-3">
         <div class="program">
           <h3>Literacy & Numeracy</h3>
@@ -669,6 +738,18 @@
     const url = `https://wa.me/${BRIGHT_BEAR_WA}?text=${text}`;
     window.open(url, "_blank");
   }
-  </script>
+
+<script>
+  const elements = document.querySelectorAll('.fade-up');
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('visible');
+      }
+    });
+  }, { threshold: 0.2 });
+  elements.forEach(el => observer.observe(el));
+</script>
+
 </body>
 </html>
