--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Bright Bear Preschool</title>
 
 <!-- Favicon and App Icons -->
-<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="https://brightbear.com.my/assets/favicon.ico?v=2" sizes="any">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png?v=2">
 <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png?v=2">
 <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-180x180.png?v=2">
