--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Bright Bear Preschool</title>
 
 <!-- Favicon and App Icons -->
-<link rel="icon" href="https://brightbear.com.my/assets/favicon.ico?v=2" sizes="any">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png?v=2">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png?v=2">
-<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-180x180.png?v=2">
-<link rel="manifest" href="assets/site.webmanifest">
+<link rel="icon" href="https://brightbear.com.my/assets/favicon.ico" sizes="any">
+<link rel="icon" type="image/png" sizes="32x32" href="https://brightbear.com.my/assets/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://brightbear.com.my/assets/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://brightbear.com.my/assets/favicon-180x180.png">
+<link rel="manifest" href="https://brightbear.com.my/assets/site.webmanifest">
 <meta name="theme-color" content="#ffffff">
     
   <meta name="description" content="Bright Bear Preschool — warm, play-based learning with strong foundations for primary school." />
