--- a/index.html
+++ b/index.html
@@ -609,8 +609,7 @@ fade-up.visible {
       <div>
         <div class="card">
           <h3 style="margin:0 0 10px">Contact Us</h3>
-          <p style="margin:0 0 8px">
-              ✉️ <a href="mailto:brightbear.klts@gmail.com" style="color:#29445c; text-decoration:none;">brightbear.klts@gmail.com
+          <p style="margin:0 0 8px">✉️ <a href="mailto:brightbear.klts@gmail.com" style="color:#29445c; text-decoration:none;">brightbear.klts@gmail.com
                 </a></p>
           <p style="margin:0 0 8px">📞 <a href="tel:+60176002267" style="text-decoration:none; color:inherit;">+60 17-600 2267
               </a></p>
