--- a/index.html
+++ b/index.html
@@ -582,6 +582,18 @@ fade-up.visible {
         <div class="quote"><p>“Bright Bear Preschool has provided both of our children with a safe, supportive, and inspiring place to learn and grow. We are very happy with our choice and would highly recommend the school to other parents”</p><div class="author">— A. Aris</div></div>
       </div>
     </div>
+
+      <!-- Add this button below testimonials -->
+    <div class="review-cta" style="text-align:center; margin-top:30px;">
+      <a href="https://www.google.com/search?sca_esv=89c0b9e6faeb52cb&rlz=1C1VDKB_enMY1038MY1038&sxsrf=AE3TifPFO0JaeJ8vK31KCIRI9hS8IAu5Hg:1761838549258&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E3NJ2L55IqZjZaylkS8CMVZWSGnHprnq2Iw1cpIDBKfs_CvIVjPDMQkgKROVh6ZtjCNsctWLJnkknL9O1B4NI4teXKNUo2RYLy6kbKnVGLePOhZb1A%3D%3D&q=Bright+Bear+Preschool+KLTS+Reviews&sa=X&ved=2ahUKEwiCgoWHoMyQAxUd2DgGHb1oOqsQ0bkNegQIHhAE&biw=1440&bih=731&dpr=2#" 
+         target="_blank" 
+         class="btn primary"
+         style="text-decoration:none;">
+         ⭐ Read More Reviews on Google
+      </a>
+    </div>
+  </div>
+  
   </section>
 
   <!-- Contact -->
