--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ fade-up.visible {
     <div class="container why">
       <div>
         <h2 class="section-title">Why Families Choose Us</h2>
-        <img src="assets/bear-icon.png" alt="Bright Bear icon" class="bear-deco">
+       
         <p class="section-lead">Similar clean structure you’re used to, but all fully branded to Bright Bear.</p>
         <ul>
           <li>Structured path to Primary 1 readiness (MoE‑aligned)</li>
@@ -547,6 +547,7 @@ fade-up.visible {
         <p style="margin:0">39-1, BLK A, KL Traders Square • Setapak</p>
         <div style="height:12px"></div>
         <a class="btn primary" href="#contact">Ask About Availability</a>
+         <img src="assets/bear-icon.png" alt="Bright Bear icon" class="bear-deco">
       </div>
     </div>
   </section>
@@ -573,7 +574,7 @@ fade-up.visible {
 
 
   <!-- Testimonials -->
-  <section id="reviews" onclick="window.open('https://www.google.com/search?sca_esv=89c0b9e6faeb52cb&rlz=1C1VDKB_enMY1038MY1038&sxsrf=AE3TifPFO0JaeJ8vK31KCIRI9hS8IAu5Hg:1761838549258&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E3NJ2L55IqZjZaylkS8CMVZWSGnHprnq2Iw1cpIDBKfs_CvIVjPDMQkgKROVh6ZtjCNsctWLJnkknL9O1B4NI4teXKNUo2RYLy6kbKnVGLePOhZb1A%3D%3D&q=Bright+Bear+Preschool+KLTS+Reviews&sa=X&ved=2ahUKEwiCgoWHoMyQAxUd2DgGHb1oOqsQ0bkNegQIHhAE&biw=1440&bih=731&dpr=2#', '_blank')" style="cursor:pointer;">
+  <section id="reviews">
     <div class="container">
       <h2 class="section-title">Parents Say…</h2>
       <div class="testis">
