--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     /* Programs Section with Background Image */
 #programs {
   position: relative;
-  background-image: url('assets/BG_Programs.jpg');
+  background-image: url('assets/BG_Programs.JPG');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
