--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 #programs {
   position: relative;
   background-image: url('assets/BG_Programs.JPG');
+  background-attachment: fixed;  /* ✅ adds parallax */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
