--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 .hero {
   position: relative;
   isolation: isolate;
-  background-image: url('assets/BG_Desktop.jpg');
+  background-image: url('assets/BG_Programs.JPG');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
