--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ fade-up.visible {
 /* Gallery row slides infinitely */
 .gallery {
   display: flex;
-  width: calc(100%); /* double width for looping */
+  width: calc(50%); /* 50% width for looping */
   animation: scrollGallery 30s linear infinite;
 }
 
