--- a/index.html
+++ b/index.html
@@ -380,12 +380,12 @@ fade-up.visible {
 
 /* Each image */
 .gallery img {
-  flex: 0 0 0%; /* 4 visible per row on desktop */
+  flex: 0 0 0%; /* 25% =4 visible per row on desktop */
   height: 250px;
   object-fit: cover;
   border-radius: 12px;
   margin-right: 10px;
-  transition: transform 0.3s ease;
+  transition: transform 0.1s ease;
 }
 
 /* Hover zoom effect */
