--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ fade-up.visible {
 /* Mobile responsive */
 @media (max-width: 900px) {
   .gallery img {
-    flex: 0 0 25%; /* 4 images visible on mobile */
+    flex: 0 0 0%; /* 25% =4 images visible on mobile */
     height: 150px;
   }
 }
