--- a/index.html
+++ b/index.html
@@ -591,11 +591,19 @@ fade-up.visible {
         <img src="assets/Student.jpg" alt="Student"/>
         <img src="assets/Sing.jpg" alt="Sing"/>
         <img src="assets/Hall2.jpg" alt="Hall2"/>
+        <img src="assets/read.JPG" alt="read"/>
+        <img src="assets/plant.JPG" alt="plant"/>
+        <img src="assets/playground.JPG" alt="playground"/>
+        <img src="assets/class.JPG" alt="class"/>
         <!-- duplicate images for seamless loop -->
         <img src="assets/Hall.jpg" alt="Hall"/>
         <img src="assets/Student.jpg" alt="Student"/>
         <img src="assets/Sing.jpg" alt="Sing"/>
         <img src="assets/Hall2.jpg" alt="Hall2"/>
+        <img src="assets/read.JPG" alt="read"/>
+        <img src="assets/plant.JPG" alt="plant"/>
+        <img src="assets/playground.JPG" alt="playground"/>
+        <img src="assets/class.JPG" alt="class"/>
       </div>
     </div>
   </div>
