--- a/index.html
+++ b/index.html
@@ -374,13 +374,13 @@ fade-up.visible {
 /* Gallery row slides infinitely */
 .gallery {
   display: flex;
-  width: calc(50%); /* 50% width for looping */
-  animation: scrollGallery 10s linear infinite;
+  width: max-content; /* fit all images in a single row */
+  animation: scrollGallery 30s linear infinite;
 }
 
 /* Each image */
 .gallery img {
-  flex: 0 0 0%; /* 25% =4 visible per row on desktop */
+  flex: 0 0 auto; /* 25% =4 visible per row on desktop */
   height: 250px;
   object-fit: cover;
   border-radius: 12px;
@@ -396,7 +396,7 @@ fade-up.visible {
 /* Animation for infinite scroll */
 @keyframes scrollGallery {
   0% { transform: translateX(0); }
-  100% { transform: translateX(50%); } /* 50%= moves half, repeats smoothly */
+  100% { transform: translateX(-50%); } /* 50%= moves half, repeats smoothly */
 }
 
 /* Pause animation on hover */
@@ -407,7 +407,7 @@ fade-up.visible {
 /* Mobile responsive */
 @media (max-width: 900px) {
   .gallery img {
-    flex: 0 0 150%; /* 25% =4 images visible on mobile */
+    width: 150px;
     height: 150px;
   }
 }
