--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ fade-up.visible {
 .gallery {
   display: flex;
   width: max-content; /* fit all images in a single row */
-  animation: scrollGallery 30s linear infinite;
+  animation: scrollGallery 30s linear infinite; /* longer duration for smoother scroll */
 }
 
 /* Each image */
@@ -589,19 +589,19 @@ fade-up.visible {
       <div class="gallery">
         <img src="assets/Hall.jpg" alt="Hall"/>
         <img src="assets/Student.jpg" alt="Student"/>
-        <img src="assets/Sing.jpg" alt="Sing"/>
-        <img src="assets/Hall2.jpg" alt="Hall2"/>
+        <img src="assets/Sing.jpg" alt="Sing"/>   
         <img src="assets/read.JPG" alt="read"/>
         <img src="assets/plant.JPG" alt="plant"/>
+        <img src="assets/Hall2.jpg" alt="Hall2"/>
         <img src="assets/playground.JPG" alt="playground"/>
         <img src="assets/class.JPG" alt="class"/>
         <!-- duplicate images for seamless loop -->
         <img src="assets/Hall.jpg" alt="Hall"/>
         <img src="assets/Student.jpg" alt="Student"/>
         <img src="assets/Sing.jpg" alt="Sing"/>
-        <img src="assets/Hall2.jpg" alt="Hall2"/>
         <img src="assets/read.JPG" alt="read"/>
         <img src="assets/plant.JPG" alt="plant"/>
+        <img src="assets/Hall2.jpg" alt="Hall2"/>
         <img src="assets/playground.JPG" alt="playground"/>
         <img src="assets/class.JPG" alt="class"/>
       </div>
