--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 .hero {
   position: relative;
   isolation: isolate;
-  background-image: url('assets/BG_Programs.JPG');
+  background-image: url('assets/BG_Programs.webp');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -229,7 +229,7 @@
 
 @media (max-width: 768px) {
   .hero {
-    background-image: url('assets/BG_Mobile.jpg');
+    background-image: url('assets/BG_Mobile.webp');
     background-attachment: scroll; /* prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
@@ -293,7 +293,7 @@
     /* Programs Section with Background Image */
 #programs {
   position: relative;
-  background-image: url('assets/BG_Programs.JPG');
+  background-image: url('assets/BG_Programs.webp');
   background-attachment: fixed;  /* ✅ adds parallax */
   background-size: cover;
   background-position: center;
