--- a/index.html
+++ b/index.html
@@ -219,6 +219,13 @@
 /* ===== MOBILE RESPONSIVE ADJUSTMENTS ===== */
 
 @media (max-width: 1024px) {
+  .hero {
+    background-image: url('assets/BG_Programs.webp');
+    background-attachment: scroll; /* prevent mobile glitch */
+    min-height: 80vh;
+    text-align: center;
+    justify-content: center;
+    }
   .hero h1 {
     font-size: 1.5rem;
   }
