--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ fade-up.visible {
         <img src="assets/plant.JPG" alt="plant"/>
         <img src="assets/Sing.jpg" alt="Sing"/>
         <img src="assets/playground.JPG" alt="playground"/>
-        <img src="assets/class.JPG" alt="class"/>
+        <img src="assets/class.jpg" alt="class"/>
         <!-- duplicate images for seamless loop -->
         <img src="assets/Hall.jpg" alt="Hall"/>
         <img src="assets/Student.jpg" alt="Student"/>
@@ -610,7 +610,7 @@ fade-up.visible {
         <img src="assets/plant.JPG" alt="plant"/>
         <img src="assets/Sing.jpg" alt="Sing"/>        
         <img src="assets/playground.JPG" alt="playground"/>
-        <img src="assets/class.JPG" alt="class"/>
+        <img src="assets/class.jpg" alt="class"/>
       </div>
     </div>
   </div>
