--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 @media (max-width: 768px) {
   .hero {
     background-image: url('assets/BG_Mobile.webp');
-    background-attachment: scroll; /* prevent mobile glitch */
+    background-attachment: fixed; /* prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
     justify-content: center;
