--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 @media (max-width: 1024px) {
   .hero {
     background-image: url('assets/BG_Programs.webp');
-    background-attachment: scroll; /* prevent mobile glitch */
+    background-attachment: fixed; /* prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
     justify-content: center;
