--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     /* Programs Section with Background Image */
 #programs {
   position: relative;
-  background-image: url('assets/BG_Programs.webp');
+  background-image: url('assets/BG_Programs_Resize.JPG');
   background-attachment: fixed;  /* ✅ adds parallax */
   background-size: cover;
   background-position: center;
