--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 .hero {
   position: relative;
   isolation: isolate;
-  background-image: url('assets/BG_Programs.webp');
+  background-image: url('assets/BG_Programs.jpg');
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -221,7 +221,7 @@
 @media (max-width: 1024px) {
   .hero {
     background-image: url('assets/BG_Programs.webp');
-    background-attachment: fixed; /* prevent mobile glitch */
+    background-attachment: fixed; /* change to scroll to prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
     justify-content: center;
@@ -237,7 +237,7 @@
 @media (max-width: 768px) {
   .hero {
     background-image: url('assets/BG_Mobile.webp');
-    background-attachment: fixed; /* prevent mobile glitch */
+    background-attachment: fixed; /* change to scroll to prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
     justify-content: center;
