--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 @media (max-width: 1024px) {
   .hero {
-    background-image: url('assets/BG_Programs_Resize.jpg');
+    background-image: url('assets/BG_Programs.jpg');
     background-attachment: fixed; /* change to scroll to prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
@@ -236,7 +236,7 @@
 
 @media (max-width: 768px) {
   .hero {
-    background-image: url('assets/BG_Programs_Resize.jpg');
+    background-image: url('assets/BG_Programs.jpg');
     background-attachment: fixed; /* change to scroll to prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
