--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   font-size: 3rem;
   font-weight: 700;
   line-height: 1.2;
-  color: rgba(255, 255, 255, 0.9);
+  Hero color: white;
   /* Hero color: var(--brand-2);*/
   margin-bottom: 20px;
 }
