--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 @media (max-width: 768px) {
   .hero {
     background-image: url('assets/BG_Programs_Resize.JPG');
-    background-attachment: fixed; /* change to scroll to prevent mobile glitch */
+    background-attachment: scroll; /* change to scroll to prevent mobile glitch */
     min-height: 80vh;
     text-align: center;
     justify-content: center;
