--- a/index.html
+++ b/index.html
@@ -603,6 +603,14 @@ fade-up.visible {
         <img src="assets/Sing.jpg" alt="Sing"/>
         <img src="assets/playground.JPG" alt="playground"/>
         <img src="assets/class.jpg" alt="class"/>
+        <img src="assets/Aactivity1.jpg" alt="Activity1"/>
+        <img src="assets/Aactivity2.jpg" alt="Activity2"/>
+        <img src="assets/Aactivity3.jpg" alt="Activity3"/>
+        <img src="assets/Aactivity4.jpg" alt="Activity4"/>
+        <img src="assets/Aactivity5.jpg" alt="Activity5"/>
+        <img src="assets/Aactivity6.jpg" alt="Activity6"/>
+        <img src="assets/Aactivity7.jpg" alt="Activity7"/>
+        <img src="assets/Aactivity8.jpg" alt="Activity8"/>
         <!-- duplicate images for seamless loop -->
         <img src="assets/Hall.jpg" alt="Hall"/>
         <img src="assets/Student.jpg" alt="Student"/>
@@ -612,6 +620,14 @@ fade-up.visible {
         <img src="assets/Sing.jpg" alt="Sing"/>        
         <img src="assets/playground.JPG" alt="playground"/>
         <img src="assets/class.jpg" alt="class"/>
+        <img src="assets/Aactivity1.jpg" alt="Activity1"/>
+        <img src="assets/Aactivity2.jpg" alt="Activity2"/>
+        <img src="assets/Aactivity3.jpg" alt="Activity3"/>
+        <img src="assets/Aactivity4.jpg" alt="Activity4"/>
+        <img src="assets/Aactivity5.jpg" alt="Activity5"/>
+        <img src="assets/Aactivity6.jpg" alt="Activity6"/>
+        <img src="assets/Aactivity7.jpg" alt="Activity7"/>
+        <img src="assets/Aactivity8.jpg" alt="Activity8"/>
       </div>
     </div>
   </div>
