--- a/index.html
+++ b/index.html
@@ -600,34 +600,34 @@ fade-up.visible {
         <img src="assets/Hall2.jpg" alt="Hall2"/>         
         <img src="assets/read.JPG" alt="read"/>
         <img src="assets/plant.JPG" alt="plant"/>
-        <img src="assets/Sing.jpg" alt="Sing"/>
         <img src="assets/playground.JPG" alt="playground"/>
         <img src="assets/class.jpg" alt="class"/>
-        <img src="assets/Aactivity1.jpg" alt="Activity1"/>
-        <img src="assets/Aactivity2.jpg" alt="Activity2"/>
-        <img src="assets/Aactivity3.jpg" alt="Activity3"/>
-        <img src="assets/Aactivity4.jpg" alt="Activity4"/>
-        <img src="assets/Aactivity5.jpg" alt="Activity5"/>
-        <img src="assets/Aactivity6.jpg" alt="Activity6"/>
-        <img src="assets/Aactivity7.jpg" alt="Activity7"/>
-        <img src="assets/Aactivity8.jpg" alt="Activity8"/>
+        <img src="assets/Sing.jpg" alt="Sing"/>
+        <img src="assets/Activity1.jpg" alt="Activity1"/>
+        <img src="assets/Activity2.jpg" alt="Activity2"/>
+        <img src="assets/Activity3.jpg" alt="Activity3"/>
+        <img src="assets/Activity4.jpg" alt="Activity4"/>
+        <img src="assets/Activity5.jpg" alt="Activity5"/>
+        <img src="assets/Activity6.jpg" alt="Activity6"/>
+        <img src="assets/Activity7.jpg" alt="Activity7"/>
+        <img src="assets/Activity8.jpg" alt="Activity8"/>
         <!-- duplicate images for seamless loop -->
         <img src="assets/Hall.jpg" alt="Hall"/>
         <img src="assets/Student.jpg" alt="Student"/>
         <img src="assets/Hall2.jpg" alt="Hall2"/>
         <img src="assets/read.JPG" alt="read"/>
         <img src="assets/plant.JPG" alt="plant"/>
-        <img src="assets/Sing.jpg" alt="Sing"/>        
         <img src="assets/playground.JPG" alt="playground"/>
         <img src="assets/class.jpg" alt="class"/>
-        <img src="assets/Aactivity1.jpg" alt="Activity1"/>
-        <img src="assets/Aactivity2.jpg" alt="Activity2"/>
-        <img src="assets/Aactivity3.jpg" alt="Activity3"/>
-        <img src="assets/Aactivity4.jpg" alt="Activity4"/>
-        <img src="assets/Aactivity5.jpg" alt="Activity5"/>
-        <img src="assets/Aactivity6.jpg" alt="Activity6"/>
-        <img src="assets/Aactivity7.jpg" alt="Activity7"/>
-        <img src="assets/Aactivity8.jpg" alt="Activity8"/>
+        <img src="assets/Sing.jpg" alt="Sing"/>
+        <img src="assets/Activity1.jpg" alt="Activity1"/>
+        <img src="assets/Activity2.jpg" alt="Activity2"/>
+        <img src="assets/Activity3.jpg" alt="Activity3"/>
+        <img src="assets/Activity4.jpg" alt="Activity4"/>
+        <img src="assets/Activity5.jpg" alt="Activity5"/>
+        <img src="assets/Activity6.jpg" alt="Activity6"/>
+        <img src="assets/Activity7.jpg" alt="Activity7"/>
+        <img src="assets/Activity8.jpg" alt="Activity8"/>
       </div>
     </div>
   </div>
